# Hp-Kernel

./: CMakeLists.txt  Makefile  README.md
boot/: boot.s  loader.c  setup.s
fs/: dir.c  dir.h  file.c  file.h  fs.c  fs.h  inode.c  inode.h
include/: elf.h  io.h  stdarg.h  stdint.h  stdio.h  x86.h
init/: head.s  main.c
kernel/: CMakeLists.txt  Kernel.S  bitmap.c  bitmap.h  console.c  console.h  fork.c  gate.h  global.h  interrupt.c  interrupt.h  io.h  kernel.s  main.c  memory.c  memory.h  panic.c  panic.h  printk.c  printk.h  process.c  process.h  switch.s  sync.c  sync.h  syscall.c  syscall.h  syscall_entry.s  system.h  task.c  task.h  thread.c  thread.h  trap.c  trap.h  trap_entry.s  tss.c  tss.h
kernel/device/: ide.c  ide.h  timer.c  timer.h
kernel/drivers/8259A/: interrupt.c  interrupt.h
kernel/drivers/console/: console.c  console.h  font_8x16.c  font_8x16.h
lib/: CMakeLists.txt  list.c  list.h  print.h  stdio.c  stdio.h  string.c  string.h
mbr/: CMakeLists.txt  boot.def  loader.s  mbr.s
mm/: memory.c  memory.h
